# beethoven

./: README.md  pom.xml
src/main/c/: CMakeLists.txt
src/main/c/audio/: audio.c  audio.h
src/main/java/org/beethoven/: BeethovenApplication.java
src/main/java/org/beethoven/config/: AppConfig.java  GlobalCorsConfig.java  JacksonConfig.java  MinioConfig.java  MybatisPlusConfig.java  OkHttpConfig.java  QiniuConfig.java  RedisConfig.java  SpringDocConfig.java  WebSocketConfig.java
src/main/java/org/beethoven/controller/: AccountController.java  AlbumController.java  AppController.java  AuthController.java  FileController.java  MusicController.java  PlaylistController.java  QueueController.java  SettingController.java  SoundController.java  StorageController.java  TestController.java  VideoController.java  WebSocketController.java
src/main/java/org/beethoven/entity/: ApiResult.java  Music.java  Playlist.java  Setting.java
src/main/java/org/beethoven/lib/: AuthContext.java  BeethovenLib.java  Constant.java  GlobalConfig.java  InitGlobal.java
src/main/java/org/beethoven/mapper/: AccountMapper.java  AlbumMapper.java  ConfigMapper.java  FileInfoMapper.java  MusicMapper.java  MusicPlaylistMapper.java  PlaylistMapper.java  SettingMapper.java  StorageMapper.java  UserPlaylistMapper.java  VideoMapper.java
src/main/java/org/beethoven/pojo/: OAuth2Info.java  PageInfo.java  PageParam.java
src/main/java/org/beethoven/vo/: MusicVo.java
src/main/resources/: application.yml
src/main/resources/mappers/: AlbumMapper.xml  MusicMapper.xml  PlaylistMapper.xml  VideoMapper.xml
(+82 files in other folders)
